--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   app:
-    image: derzan_fapi
+    image: derzanfapi
     container_name: app
     build:
       context: .
@@ -18,7 +18,7 @@ services:
   celery:
     container_name: celery
     build: .
-    command: celery -A tasks worker -l info
+    command: celery -A core.tasks worker -l info
     restart: always
     environment:
       - MONGO_URI=mongodb://alien:07775000@mongodb:27017/
@@ -42,6 +42,7 @@ services:
 
   flower:
     image: mher/flower
+    container_name: flower
     restart: always
     environment:
       - CELERY_BROKER=redis://redis:6379/0
@@ -54,6 +55,7 @@ services:
 
   redis:
     image: redis:alpine
+    container_name: redis
     restart: always
 
 volumes:
