--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-REDIS_URI=redis://localhost:6379/0
-CELERY_BROKER=redis://localhost:6379/0
-CELERY_BACKEND=redis://localhost:6379/1
+REDIS_URI=redis://165.22.19.183:6379/0
+CELERY_BROKER=redis://165.22.19.183:6379/0
+CELERY_BACKEND=redis://165.22.19.183:6379/1
 
 MONGO_INITDB_ROOT_USERNAME=alien
 MONGO_INITDB_ROOT_PASSWORD=07775000
-MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017/
+MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@165.22.19.183:27017/
 
 
