--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - mongodb
 
   mongodb:
-    image: mongo:latest
+    image: mongo:6.0
     container_name: mongodb
     environment:
       - MONGO_INITDB_ROOT_USERNAME=alien
